<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.register.RegisterActivity">

    <LinearLayout
        android:padding="@dimen/padding_medium"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="@dimen/margin_large"
            android:layout_width="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:icon="@drawable/ic_baseline_arrow_back_24"
            android:textSize="@dimen/text_size_small"
            android:text="@string/button_text_back"
            android:id="@+id/back_button"
            android:layout_height="wrap_content"/>

        <TextView
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="@dimen/text_size_large"
            android:text="@string/header_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/header_desc_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            android:layout_marginVertical="@dimen/margin_small"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/progress_bar_height"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/name_input"
            app:errorEnabled="true"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/name_edit_text"
                android:hint="@string/hint_register_name"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/email_input"
            app:errorEnabled="true"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/email_edit_text"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_register_email"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/password_input"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/password_edit_text"
                android:inputType="textPassword"
                android:hint="@string/hint_register_password"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:text="@string/button_text_register"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>