<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/padding_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="@dimen/margin_large"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_large"
            android:text="@string/header_login"
            android:fontFamily="sans-serif-medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:fontFamily="sans-serif-medium"
            android:text="@string/header_desc_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_medium"
            android:id="@+id/loading_progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/progress_bar_height"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:id="@+id/email_input"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/email_edit_text"
                android:hint="@string/hint_login_email_edit_text"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/password_input"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:id="@+id/password_edit_text"
                android:hint="@string/hint_login_password_edit_text"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/login_button"
            android:text="@string/button_text_login"
            android:layout_height="wrap_content"/>

    </LinearLayout>



    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:id="@+id/register_button"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/button_text_dont_have_account"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"/>

</RelativeLayout>