<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.detail.DetailMainFragment">

    <LinearLayout
        android:padding="@dimen/padding_medium"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxBackgroundColor="@android:color/transparent"
            app:errorEnabled="true"
            android:id="@+id/product_name_input"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:hint="@string/hint_product_name"
                android:id="@+id/product_name_edit_text"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxBackgroundColor="@android:color/transparent"
            app:errorEnabled="true"
            android:id="@+id/product_price_input"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:hint="@string/hint_product_price"
                android:id="@+id/product_price_edit_text"
                android:inputType="number"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/update_button"
            android:text="@string/button_text_update"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/delete_button"
            app:backgroundTint="@color/color_danger"
            android:text="@string/button_text_delete"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>