<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:padding="@dimen/padding_medium"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/product_name_input"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/hint_product_name"
                android:id="@+id/product_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:id="@+id/product_price_input"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="number"
                android:id="@+id/product_price_edit_text"
                android:hint="@string/hint_product_price"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/save_button"
            android:text="@string/button_text_save"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>